# fmri-fm-eval

./: .gitignore  pyproject.toml
ADHD200/scripts/: preprocess.sh
datasets/ABIDE/scripts/: make_abide_arrow.py  make_abide_arrow.sh  make_abide_dataset.py
datasets/ADHD200/scripts/: make_adhd200_arrow.py  make_adhd200_arrow.sh
datasets/HCP-YA/: README.md
datasets/HCP-YA/scripts/: make_hcpya_all_wds.sh  make_hcpya_clips_arrow.py  make_hcpya_metadata.py  make_hcpya_rest1lr_arrow.py  make_hcpya_rest1lr_dataset.py  make_hcpya_subject_batch_splits.py  make_hcpya_subject_splits.py  make_hcpya_task21_arrow.py  upload_hcpya_r2.sh
datasets/HCP-YA/splits/: hcpya_subject_splits.json
datasets/PPMI/notebooks/: ppmi_data_counts.ipynb
datasets/PPMI/scripts/: make_ppmi_dataset.py
src/fmri_fm_eval/: main_probe.py  nisc.py  readers.py  utils.py
src/fmri_fm_eval/config/: default_logistic.yaml  default_probe.yaml
src/fmri_fm_eval/datasets/: aabc.py  abide.py  adhd200.py  adni.py  base.py  hcpya.py  nsd.py  ppmi.py  registry.py
src/fmri_fm_eval/models/: base.py  brain_semantoks.py  neurostorm.py  registry.py  template.py
src/fmri_fm_eval/utils/: __init__.py  cifti.py  flatmap.py  parcellation.py  preprocessing.py
